Add autodoc annoation and typehints

--- a/environment.yml
+++ b/environment.yml
@@ -4,6 +4,8 @@ channels:
  - anaconda
 dependencies:
  - pip
+   - sphinx-autodoc-typehints
+   - sphinx-autodoc-annotation
  - python=3.6
  - pandas
  - numpy
